--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -73,7 +73,7 @@
   "wishlist": "wishlist",
   "cart": "cart",
   "collection": "collection",
-  "forget-password": "forget password",
+  "forget-password": "forgot password",
   "contact": "contact",
   "checkout": "checkout",
   "compare": "compare",
